# takt

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SESSION_SUMMARY.md  requirements.txt
adapters/cli/: CMakeLists.txt
adapters/cli/src/: adapter.cc
adapters/ui/: CMakeLists.txt
adapters/ui/include/einheit/adapters/takt/: takt_client.h  ui_adapter.h
adapters/ui/src/: adapter.cc  takt_client.cc
adapters/ui/templates/takt/: agents.html.inja  agents_table.html.inja  dashboard.html.inja  dashboard_summary.html.inja  editor.html.inja  home.html.inja  meta_agents.html.inja  pipeline.html.inja  run_detail.html.inja  runs.html.inja  runs_table.html.inja  settings.html.inja  step_output.html.inja  step_output_tail.html.inja  targets.html.inja  workspace_detail.html.inja  workspaces.html.inja
assets/: banner.txt
assets/cm6/: codemirror.js
binaries/takt-cli/src/: main.cc
binaries/takt-ui/src/: main.cc
config/: einheit-ui.service  repos.yaml  takt-api.service  takt-service.service  takt-socat.service  takt.yaml  takt.zsh  targets.yaml  tui_settings.yaml
context/: architecture.md  building-repos.md  dashboard.md  decisions.md  pipeline-kitty.md  pipeline-service.md  vm-templates.md  windows-vm.md  workstation-setup.md
gui/: index.html  package-lock.json  package.json
gui/src/: App.tsx  api.ts  commands.ts  main.tsx  style.css  theme.ts  toast.ts  utils.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: AgentOutput.tsx  Agents.tsx  (+10 more)
lib/: agent_registry.py  agent_runner.py  agent_store.py  api.py  checks.py  chroot_ops.py  commands.py  config.py  db.py  git_status.py  git_utils.py  log_setup.py  meta_runner.py  notify.py  pipeline.py  pr_ops.py  protocol.py  service.py  service_client.py  session_parser.py  ssh_utils.py  target_ops.py  workspace_ops.py  worktree.py
templates/: chroot_claude.md  pipeline_roles.md  root_repo_claude.md  testing_stage_claude.md  utility_stage_claude.md  workspace_claude.md
tests/: test_agent_output.py  test_agent_runner.py  test_agent_store.py  test_api.py  test_clone_vm.py  test_config.py  test_db.py  test_git_status.py  test_mcp.py  test_meta_agents.py  test_notify.py  test_pipeline.py  test_pipeline_grid.py  test_pipeline_panel.py  test_pipeline_watch.py  test_pr_ops.py  test_protocol.py  test_provision_vm.py  test_provision_win_vm.py  test_selectable_log.py  test_service.py  test_setup_libvirt.py  test_setup_win_vm.py  test_stages.py  test_target.py  test_worktree.py
tui/: app.py  dashboard.tcss  mixins.py  screens.py
tui/tabs/: agent_tab.py  agents_tab.py  dashboard_tab.py  meta_tab.py  pipeline_tab.py  settings_tab.py  targets_tab.py  trigger_tab.py  workspaces_tab.py
tui/widgets/: agent_output.py  agents.py  detail.py  pipeline.py  pipeline_grid.py  prs.py  selectable_log.py  stages.py  style_utils.py  targets.py  usage.py  workspaces.py
(+3 files in other folders)
